--- a/CarePointe/Base.lproj/Main.storyboard
+++ b/CarePointe/Base.lproj/Main.storyboard
@@ -1,26 +1,120 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CarePointe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BlackandWhite.png" translatesAutoresizingMaskIntoConstraints="NO" id="pEB-Rl-ma3">
+                                <rect key="frame" x="100" y="98" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="0mS-rE-ymh"/>
+                                    <constraint firstAttribute="width" constant="120" id="xI3-QJ-w3m"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="E-mail" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="upy-lB-jZ5">
+                                <rect key="frame" x="48" y="286" width="225" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="NJG-mT-pgA"/>
+                                </constraints>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="loginInteraction:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="uxH-Ub-Fpd"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8n6-ZD-EFj">
+                                <rect key="frame" x="48" y="325" width="225" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7bM-Bj-jnv"/>
+                                </constraints>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="loginInteraction:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="KAD-se-Pr6"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9y-kv-tTA">
+                                <rect key="frame" x="48" y="373" width="225" height="40"/>
+                                <color key="backgroundColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Lan-qh-xcB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
+                                <state key="normal" title="Sign In">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showWeb:" destination="BYZ-38-t0r" eventType="touchUpInside" id="G3O-nc-Di7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7EQ-YM-Ek3">
+                                <rect key="frame" x="94" y="421" width="133" height="28"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                <state key="normal" title="Forgot your details?">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2XX-WG-1XS">
+                                <rect key="frame" x="130" y="510" width="60" height="28"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                <state key="normal" title="Support">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="7EQ-YM-Ek3" secondAttribute="trailing" constant="77" id="7Bm-GJ-a5g"/>
+                            <constraint firstItem="7EQ-YM-Ek3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="78" id="8Oj-Kr-y4C"/>
+                            <constraint firstItem="upy-lB-jZ5" firstAttribute="top" secondItem="pEB-Rl-ma3" secondAttribute="bottom" constant="68" id="EcH-Ho-g2i"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="f9y-kv-tTA" secondAttribute="trailing" constant="31" id="IDj-jq-8wt"/>
+                            <constraint firstItem="upy-lB-jZ5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="NrN-fF-oKP"/>
+                            <constraint firstItem="pEB-Rl-ma3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="78" id="XiK-Hz-qwF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2XX-WG-1XS" secondAttribute="trailing" constant="114" id="cpI-UB-ASJ"/>
+                            <constraint firstItem="2XX-WG-1XS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="114" id="dK3-hj-JQa"/>
+                            <constraint firstItem="f9y-kv-tTA" firstAttribute="top" secondItem="8n6-ZD-EFj" secondAttribute="bottom" constant="8" id="dPO-pT-0FI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8n6-ZD-EFj" secondAttribute="trailing" constant="31" id="dcC-kZ-cPb"/>
+                            <constraint firstItem="7EQ-YM-Ek3" firstAttribute="top" secondItem="f9y-kv-tTA" secondAttribute="bottom" constant="8" id="fiS-ei-qdU"/>
+                            <constraint firstItem="pEB-Rl-ma3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fsS-GQ-8ze"/>
+                            <constraint firstItem="8n6-ZD-EFj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="fta-PH-uTI"/>
+                            <constraint firstItem="8n6-ZD-EFj" firstAttribute="top" secondItem="upy-lB-jZ5" secondAttribute="bottom" constant="-1" id="hSL-6f-jYt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="upy-lB-jZ5" secondAttribute="trailing" constant="31" id="im2-qQ-IAy"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2XX-WG-1XS" secondAttribute="bottom" constant="30" id="wW3-zk-2Nm"/>
+                            <constraint firstItem="f9y-kv-tTA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="yDY-eU-YtC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="email" destination="upy-lB-jZ5" id="RAp-4i-f0R"/>
+                        <outlet property="password" destination="8n6-ZD-EFj" id="FFG-y3-eFN"/>
+                        <outlet property="signIn" destination="f9y-kv-tTA" id="aOF-Wc-aWs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116.25" y="123.59154929577466"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BlackandWhite.png" width="142" height="142"/>
+    </resources>
 </document>
